# jetson-watcher

./: CMakeLists.txt  commands.txt  dependencies.txt
client/: package-lock.json
config/: config_infer_primary_frcnn.txt  config_infer_primary_peoplenet.txt
src/: scene.c  scene.h  watcher.c
